Closed Bug 245944 Opened 22 years ago Closed 18 years ago

potential crash [@ nsMsgIncomingServer::ConfigureTemporaryReturnReceiptsFilter]

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9beta1

People

(Reporter: timeless, Assigned: mkmelin)

References

()

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

This is from inspection based on reading a random talkback report for mozilla1.7 2036 newFilter->CreateAction(getter_AddRefs (filterAction)); //return: nsresult indicating OOM at least 2037 filterAction->SetType (nsMsgFilterAction::MoveToFolder); //crash if you don't check rv or out.
Product: MailNews → Core
sorry for the spam. making bugzilla reflect reality as I'm not working on these bugs. filter on FOOBARCHEESE to remove these in bulk.
Assignee: sspitzer → nobody
(In reply to comment #0) > //crash if you don't check rv or out. seems odd, but I'm not finding the above fragment in *any* revision of nsMsgIncomingServer.cpp on lxr. I checked several revisions dated before and after timeless' comment. why would i not be finding it?
OS: Windows XP → All
QA Contact: backend
Hardware: PC → All
oh, those comments were from me about the code. coders shouldn't normally add such lines to code, they should fix the code. (note: i've actually added lines like that for one mozilla module, but not mail)
Attached patch proposed fixSplinter Review
Nothing I've had problems with but... might as well fix it so we can close this old bug.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #280361 - Flags: superreview?(bienvenu)
Attachment #280361 - Flags: review?(bienvenu)
Comment on attachment 280361 [details] [diff] [review] proposed fix sure, thx.
Attachment #280361 - Flags: superreview?(bienvenu)
Attachment #280361 - Flags: superreview+
Attachment #280361 - Flags: review?(bienvenu)
Attachment #280361 - Flags: review+
Checking in mailnews/base/util/nsMsgIncomingServer.cpp; /cvsroot/mozilla/mailnews/base/util/nsMsgIncomingServer.cpp,v <-- nsMsgIncomingServer.cpp new revision: 1.260; previous revision: 1.259 done ->FIXED
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
Target Milestone: --- → mozilla1.9beta1
Crash Signature: [@ nsMsgIncomingServer::ConfigureTemporaryReturnReceiptsFilter]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: