Fix for [Bug 245944] potential crash [@ nsMsgIncomingServer:: ConfigureTemporaryReturnReceiptsFilter]

r+sr=bienvenu